--- a/frontend/taskpro/package.json
+++ b/frontend/taskpro/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://CristinaSuciu26.github.io/TaskPro",
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -12,8 +13,8 @@
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
