--- a/frontend/taskpro/package.json
+++ b/frontend/taskpro/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "homepage": "https://CristinaSuciu26.github.io/TaskPro",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hello-pangea/dnd": "^18.0.1",
+    "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.16.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.19",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
